--- a/samples/BasicSample/vc2013/BasicSample.vcxproj.filters
+++ b/samples/BasicSample/vc2013/BasicSample.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="..\..\..\src\components\PretzelRoot.h">
       <Filter>Blocks\PretzelGUI\src\components</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\modules\PretzelShaders.h">
+      <Filter>Blocks\PretzelGUI\src\modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources.rc">
